Add 'Block' component to allow grouping of entries
- Refactor rendering code
- Refactor component construction code
- Add short text parameter (within a struct) to rendering output

--- a/config.yml
+++ b/config.yml
@@ -16,6 +16,7 @@
 refresh_interval: 500
 components:
   - identifier: hostname
+    block_name: hostname
     type: Hostname
   - identifier: uptime_label
     type: Text
